# programming

./: .gitignore  Cargo.toml  flake.nix  programming.cabal
haskell/: AOC21_01.hs  AOC21_02.hs  AOC21_03.hs  AOC21_04.hs  AOC21_05.hs  AOC21_06.hs  AOC21_07.hs  AOC21_08.hs  AOC21_09.hs  _main.hs
rust/: _main.rs  aoc23_01.rs  aoc23_02.rs  aoc23_03.rs
