cabal-version:      2.4
name:               programming
version:            0.1.0.0

author:             Alexion Ramos
maintainer:         ratex98@gmail.com

library
    build-depends:    base ^>=4.14.3.0
                    , containers
    hs-source-dirs:   haskell
    default-language: Haskell2010

    exposed-modules:  AOC21_01
                    , AOC21_02
                    , AOC21_03
                    , AOC21_04
                    , AOC21_05
                    , AOC21_06
                    , AOC21_07
                    , AOC21_08
                    , AOC21_09

executable problem
    main-is:          _main.hs

    build-depends:    base ^>=4.14.3.0
                    , containers
                    , programming

    hs-source-dirs:   haskell
    default-language: Haskell2010
